Activity 12/program/cpsysinfo/cpsysinfo.txt
make -C /lib/modules/6.8.0-51-generic/build M=/home/reisenx/Documents/act12/cpsysinfo modules
make[1]: Entering directory '/usr/src/linux-headers-6.8.0-51-generic'
warning: the compiler differs from the one used to build the kernel
  The kernel was built by: x86_64-linux-gnu-gcc-13 (Ubuntu 13.3.0-6ubuntu2~24.04) 13.3.0
  You are using:           gcc-13 (Ubuntu 13.3.0-6ubuntu2~24.04) 13.3.0
  CC [M]  /home/reisenx/Documents/act12/cpsysinfo/cpsysinfo.o
In file included from /home/reisenx/Documents/act12/cpsysinfo/cpsysinfo.c:1:
/home/reisenx/Documents/act12/cpsysinfo/cpsysinfo.c: In function ‘cpsysinfo_init’:
./include/linux/init.h:184:22: error: passing argument 1 of ‘class_create’ from incompatible pointer type [-Werror=incompatible-pointer-types]
  184 | #define THIS_MODULE (&__this_module)
      |                     ~^~~~~~~~~~~~~~~
      |                      |
      |                      struct module *
/home/reisenx/Documents/act12/cpsysinfo/cpsysinfo.c:102:28: note: in expansion of macro ‘THIS_MODULE’
  102 |     cpClass = class_create(THIS_MODULE, CLASS_NAME);
      |                            ^~~~~~~~~~~
In file included from ./include/linux/device.h:31,
                 from /home/reisenx/Documents/act12/cpsysinfo/cpsysinfo.c:6:
./include/linux/device/class.h:228:54: note: expected ‘const char *’ but argument is of type ‘struct module *’
  228 | struct class * __must_check class_create(const char *name);
      |                                          ~~~~~~~~~~~~^~~~
/home/reisenx/Documents/act12/cpsysinfo/cpsysinfo.c:102:15: error: too many arguments to function ‘class_create’
  102 |     cpClass = class_create(THIS_MODULE, CLASS_NAME);
      |               ^~~~~~~~~~~~
./include/linux/device/class.h:228:29: note: declared here
  228 | struct class * __must_check class_create(const char *name);
      |                             ^~~~~~~~~~~~
cc1: some warnings being treated as errors
make[3]: *** [scripts/Makefile.build:243: /home/reisenx/Documents/act12/cpsysinfo/cpsysinfo.o] Error 1
make[2]: *** [/usr/src/linux-headers-6.8.0-51-generic/Makefile:1925: /home/reisenx/Documents/act12/cpsysinfo] Error 2
make[1]: *** [Makefile:240: __sub-make] Error 2
make[1]: Leaving directory '/usr/src/linux-headers-6.8.0-51-generic'
make: *** [Makefile:3: all] Error 2

